testdata/golden/sema/invalid/implicit_block_value_nested_call_warn.fmt
fn consume(x: int) -> nothing {
    return nothing;
}

fn main() -> nothing {
    consume({
        let y = 1;
        y;
    });
    return nothing;
}
